--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,7 +102,7 @@ input, select, textarea {
 		background-color: #2e3141;
 		/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 		background-image: url("../../images/hstimg2.jpg");
-		background-size: auto,
+		background-size: cover,
  cover;
 		background-attachment: fixed,
  fixed;
