--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,12 +102,10 @@ input, select, textarea {
 		background-color: #2e3141;
 		/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 		background-image: url("../../images/hstimg2.jpg");
-		background-size: cover,
- cover;
-		background-attachment: fixed,
- fixed;
-		background-position: left,
- center;
+		background-size: cover, cover;
+		background-attachment: fixed, fixed;
+		background-position: left, center;
+		will-change: transform;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2372,6 +2370,13 @@ input, select, textarea {
 			border-radius: 0;
 			padding: 0;
 		}
+
+/* Blur */
+
+	.blur {
+		backdrop-filter: blur(10px);
+		-webkit-backdrop-filter: blur(10px);
+	}
 
 /* Icon */
 
