--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,14 +98,21 @@ input, select, textarea {
 		box-sizing: inherit;
 	}
 
-	body {
-		background-color: #2e3141;
+	#page-wrapper::before {
+		content: ' ';
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		/*background-color: #2e3141;*/
 		/* background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 		background-image: url("../../images/hstimg2.jpg");
-		background-size: cover, cover;
-		background-attachment: fixed, fixed;
-		background-position: left, center;
+		background-size: cover;
+		/*background-attachment: fixed, fixed;*/
+		/*background-position: left, center;*/
 		will-change: transform;
+		z-index: -1;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2376,6 +2383,9 @@ input, select, textarea {
 	.blur {
 		backdrop-filter: blur(10px);
 		-webkit-backdrop-filter: blur(10px);
+	}
+	.blur::before {
+		will-change: transform;
 	}
 
 /* Icon */
